Fixed line-clamp overflow problem with custom checkbox

--- a/src/components/Task/ListTask/ListTask.css
+++ b/src/components/Task/ListTask/ListTask.css
@@ -21,6 +21,6 @@
   width: 100%;
 }
 
-.list-task .task__title {
+.list-task .task__title span{
   -webkit-line-clamp: 1;
 }
