--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -16,6 +16,7 @@
 }
 
 .task__title {
+  display: block;
   font-size: 1.2rem;
   font-weight: 600;
   color: var(--black);
